tests/fixtures/invalid/dict_div_none.py
# Cannot divide Dict[str, int] and None
x: float = {"a": 1} / None
